cmake_minimum_required(VERSION 3.19)
project(CplusFinal)

set(CMAKE_CXX_STANDARD 14)

add_executable(CplusFinal ZadClassKcpp/main.cpp ZadClassKcpp/src/Zadania.cpp ZadClassKcpp/include/Zadania.h ZadClassKcpp/src/Zadania1.cpp ZadClassKcpp/src/Zadania2.cpp ZadClassKcpp/src/Zadania3.cpp ZadClassKcpp/src/Zadania4.cpp ZadClassKcpp/src/Zadania5.cpp)