cmake_minimum_required(VERSION 3.19)
project(CplusFinal)

set(CMAKE_CXX_STANDARD 14)

add_executable(CplusFinal
        ZadClassKcpp/main.cpp
        ZadClassKcpp/src/Zadania.cpp
        ZadClassKcpp/include/Zadania.h
        ZadClassKcpp/src/Zadania1.cpp
        ZadClassKcpp/src/Zadania2.cpp
        ZadClassKcpp/src/ZadKcpp.cpp
        ZadClassKcpp/include/ZadKcpp.h
        ZadClassKcpp/src/Zadanie3_1.cpp
        ZadClassKcpp/src/Zadanie3_2.cpp
        ZadClassKcpp/src/Zadanie3_3.cpp
        ZadClassKcpp/src/Zadanie3_4.cpp
        ZadClassKcpp/src/Zadanie3_5.cpp
        ZadClassKcpp/src/Zadanie3_6.cpp
        ZadClassKcpp/src/Zadanie3_7_A.cpp
        ZadClassKcpp/src/Zadanie3_7_B.cpp
        ZadClassKcpp/src/Zadanie4_0.cpp
        ZadClassKcpp/src/Zadanie4_1.cpp
        ZadClassKcpp/src/Zadanie4_2.cpp
        ZadClassKcpp/src/Zadanie4_3.cpp
        ZadClassKcpp/src/Zadanie4_4.cpp
        ZadClassKcpp/src/Zadanie4_5.cpp
        ZadClassKcpp/src/Zadanie4_6.cpp
        ZadClassKcpp/src/Zadanie4_7.cpp
        ZadClassKcpp/src/Zadanie5_1.cpp
        ZadClassKcpp/src/Zadanie5_2.cpp
        ZadClassKcpp/src/Zadanie5_3.cpp
        ZadClassKcpp/src/Zadanie5_4.cpp
        ZadClassKcpp/src/Zadanie5_5.cpp
        ZadClassKcpp/src/Zadanie5_6.cpp
        )